@@ -1,6 +1,8 @@
 JavOllama
 Java implementation of the Ollama project 
 
+add this line to IntelliJ's compiler settings shared build VM options: --enable-preview --add-modules jdk.incubator.vector
+
 add this VM option to the JVM when you run the project:
 --enable-preview --add-modules jdk.incubator.vector
 
